# chunk_monkey

./: .gitignore  ENHANCEMENT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  burns_section_summary.json  doc.py  doc2.py  main.py  propositions.json  pyproject.toml  section_filter_demo.py  visualize_document.py
example_output/: burns-with-image-refs.md  burns-with-images.md  burns_structured.json  document_structure.json  document_visualization.html
examples/: basic_usage.py
legacy/: PROJECT_ORGANIZATION.md  app.py  burns_structured_local.json  config.yml  create_overview.py  demo_features.json  demo_structured_json.py  example_abstract_section.html  example_abstract_section.json  example_custom.html  example_custom.json  example_output.html  example_output.json  quick_test.py  requirements.txt  run_tests.py  struct_text.py  test_implementation.py  verify_setup.py  visualize_document.py
output/: burns-final-with-tables.html  burns-with-image-refs.html  burns-with-image-refs.md  burns-with-tables-fixed.html  burns_debug.html  burns_enhanced_final.html  burns_structure_overview.json  burns_structured_markdown.json  burns_visualization.html  burns_visualization_demo.html  burns_visualization_enhanced.html  burns_with_images.html  demo_features_visualization.html
output_test/: burns-docling.html  burns.md  burns_output.html  burns_structured.json
src/: __init__.py
src/config/: __init__.py  settings.py
src/generators/: __init__.py  html_generator.py
src/processors/: __init__.py  pdf_processor.py
src/utils/: __init__.py  file_utils.py  text_utils.py
