[project]
name = "cm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.42.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]
